<resources>
    <string name="app_name">Motivation</string>
    <string name="new_phrase">Nova Frase</string>
    <string name="salutation">Olá, Kotlin</string>
    <string name="phrase">Motivation Motivation Motivation</string>
    <string name="lets_start">Vamos Começar?</string>
    <string name="whats_name">Qual o seu nome?</string>
    <string name="button_save">salvar</string>
    <string name="validation_mandatory_name">Informe seu nome!</string>
</resources>