<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="24dp"
    tools:context=".Ui.UserActivity">

    <TextView
        android:id="@+id/text_letsStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/cabin"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/cabin"
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:hint="@string/whats_name"
        android:textColorHint="@color/white" />

    <Button
        android:textSize="16sp"
        android:fontFamily="@font/cabin"
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/button_save" />

</RelativeLayout>