<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.MainActivity">


    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive" />

        <ImageView
            android:id="@+id/imagem_sunny"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny" />

        <ImageView
            android:id="@+id/image_emoji_emotions"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_emoji_emotions" />


    </LinearLayout>

    <TextView
        android:id="@+id/text.user_name"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_menu"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cabin"
        android:padding="10dp"
        android:text="@string/salutation"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:textSize="22sp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/black"
        android:text="@string/phrase" />

    <View
        android:id="@+id/view_bar"
        android:elevation="5dp"
        android:backgroundTint="@color/dark_purple"
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_phrase"
        android:layout_centerHorizontal="true"
        android:background="@color/black" />

    <Button
        android:id="@+id/button_newPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@color/dark_purple"
        android:fontFamily="@font/cabin"
        android:text="@string/new_phrase" />


</RelativeLayout>